--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -57,7 +57,7 @@
                 >Register</a
               >
 
-              <a class="get-start-btn" href="register-restaurant.html">
+              <a class="get-start-btn" href="{% url 'registerVendor' %}">
                 Register Restaurant
               </a>
             </div>
