Vendor Registration, Prevent Unauthorised access, Login, Logout

--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -43,23 +43,34 @@
           </div>
           <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
             <div class="login-option">
+              {% if user.is_authenticated %}
+
+              <a class="get-start-btn" href="{% url 'myAccount' %}">
+                MY ACCOUNT
+              </a>
               <a
-                class="cs-color cs-popup-joinus-btn login-popup custom-button"
-                data-toggle="modal"
+                class="cs-color cs-popup-joinus-btn login-popup text-danger"
+                href="{% url 'logout' %}"
+                >Logout</a
+              >
+              {% else %}
+
+              <a
+                class="cs-color cs-popup-joinus-btn login-popup"
                 href="{% url 'login' %}"
                 >Login</a
               >
 
               <a
-                class="cs-color cs-popup-joinus-btn login-popup custom-button"
-                data-toggle="modal"
+                class="cs-color cs-popup-joinus-btn login-popup"
                 href="{% url 'registerCustomer' %}"
                 >Register</a
               >
 
               <a class="get-start-btn" href="{% url 'registerVendor' %}">
-                Register Restaurant
+                Register Vendor
               </a>
+              {% endif %}
             </div>
           </div>
         </div>
