--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,1 +1,106 @@
-<h3>Login Page</h3>
+{% extends 'base.html' %} {% block content %}
+<!-- Main Section Start -->
+<div class="main-section">
+  <div
+    class="page-section nopadding cs-nomargin"
+    style="
+      margin-top: 0px;
+      padding-top: 60px;
+      padding-bottom: 60px;
+      margin-bottom: 0px;
+    "
+  >
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+          <div
+            class="user-dashboard loader-holder"
+            style="width: 28rem; min-height: auto"
+          >
+            <div class="user-holder">
+              <h4 class="text-center" style="margin-bottom: 0">SIGN IN</h4>
+              <p class="text-center">
+                Access Umba Timba Services by signing into your account
+              </p>
+              <hr />
+              <div id="restaurant-sets-holder">
+                <form
+                  class="form-fields-set foodbakery-dev-restaurant-form"
+                  method="post"
+                  action="{% url 'login' %}"
+                  enctype="multipart/form-data"
+                >
+                  {% csrf_token %}
+                  <ul
+                    class="register-add-restaurant-tab-container restaurant-information-tab-container"
+                  >
+                    <li>
+                      <div class="row">
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                          <div class="row">
+                            <div
+                              class="col-lg-12 col-md-12 col-sm-12 col-xs-12"
+                            >
+                              <div class="field-holder">
+                                <label for="email">Email</label>
+                                <input
+                                  type="email"
+                                  id="email"
+                                  name="email"
+                                  placeholder="Enter your email"
+                                />
+                              </div>
+                            </div>
+                            <div
+                              class="col-lg-12 col-md-12 col-sm-12 col-xs-12"
+                            >
+                              <div class="field-holder">
+                                <label for="password">Password</label>
+                                <input
+                                  type="password"
+                                  name="password"
+                                  id="password"
+                                  placeholder="Enter your password"
+                                />
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="row">
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                          <div class="field-holder">
+                            <div class="payment-holder">
+                              <input
+                                type="submit"
+                                value="Login"
+                                id="btn-next-restaurant-information"
+                                class="bgcolor"
+                              />
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="row">
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                          <!-- LOAD ERROR MESSAGE HERE -->
+                          {% include 'includes/alerts.html' %}
+                        </div>
+                      </div>
+                    </li>
+                  </ul>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Main Section End -->
+
+{% endblock %}
