--- a/templates/accounts/registerCustomer.html
+++ b/templates/accounts/registerCustomer.html
@@ -105,15 +105,25 @@
                       </div>
                     </li>
                     <li>
-                      <ul class="errorlist">
-                        {% for field in forms %}
-                          {% if field.errors %}
-                            {% for error in field.errors %}
-                              <li style="color: red;">{{ error }}</li>
-                            {% endfor %}  
-                          {% endif %}
-                        {% endfor %}
-                      </ul>
+                        <!-- For user_form errors -->
+                        <ul class="errorlist">
+                          {% for field in user_form %}
+                            {% if field.errors %}
+                              {% for error in field.errors %}
+                                <li style="color: red;">{{ error }}</li>
+                              {% endfor %}  
+                            {% endif %}
+                          {% endfor %}
+                        </ul>
+                      </li>
+                      <!-- For general form errors -->
+                      <li>
+                        <ul class="errorlist">
+                            {% for error in user_form.non_field_errors %}
+                                <li style="color: red;">{{ error }}</li>
+                            {% endfor %}
+                        </ul>
+                      </li>
                       <div class="row">
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                           <div class="field-holder">
