--- a/templates/accounts/registerVendor.html
+++ b/templates/accounts/registerVendor.html
@@ -1,8 +1,8 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %}
+{% block content %}
 <!-- Main Section Start -->
 <div class="main-section">
-  <div
-    class="page-section nopadding cs-nomargin"
+  <div class="page-section nopadding cs-nomargin"
     style="
       margin-top: 0px;
       padding-top: 60px;
@@ -124,8 +124,9 @@
                       </div>
                     </li>
                     <li>
+                      <!-- For user_form errors -->
                       <ul class="errorlist">
-                        {% for field in forms %}
+                        {% for field in user_form %}
                           {% if field.errors %}
                             {% for error in field.errors %}
                               <li style="color: red;">{{ error }}</li>
@@ -133,6 +134,31 @@
                           {% endif %}
                         {% endfor %}
                       </ul>
+                    </li>
+
+                    <!-- For vendor_form errors -->
+                    <li>
+                      <ul class="errorlist">
+                        {% for field in vendor_form %}
+                          {% if field.errors %}
+                            {% for error in field.errors %}
+                              <li style="color: red;">{{ error }}</li>
+                            {% endfor %}  
+                          {% endif %}
+                        {% endfor %}
+                      </ul>
+                    </li>
+
+                    <!-- For general form errors -->
+                    <li>
+                      <ul class="errorlist">
+                          {% for error in user_form.non_field_errors %}
+                              <li style="color: red;">{{ error }}</li>
+                          {% endfor %}
+                      </ul>
+                    </li>
+
+
                       <div class="row">
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                           <div class="field-holder">
