Forgot Password setup, Optimizing sending mail

--- a/templates/accounts/forgot_password.html
+++ b/templates/accounts/forgot_password.html
@@ -18,16 +18,19 @@
             style="width: 28rem; min-height: auto"
           >
             <div class="user-holder">
-              <h4 class="text-center" style="margin-bottom: 0">SIGN IN</h4>
+              <h4 class="text-center" style="margin-bottom: 0">
+                FORGOT PASSWORD
+              </h4>
               <p class="text-center">
-                Access Umba Timba Services by signing into your account
+                Please enter the email address registered with Umba Timab Online
+                Marketplace
               </p>
               <hr />
               <div id="restaurant-sets-holder">
                 <form
                   class="form-fields-set foodbakery-dev-restaurant-form"
                   method="post"
-                  action="{% url 'login' %}"
+                  action="{% url 'forgot_password' %}"
                   enctype="multipart/form-data"
                 >
                   {% csrf_token %}
@@ -51,20 +54,6 @@
                                 />
                               </div>
                             </div>
-                            <div
-                              class="col-lg-12 col-md-12 col-sm-12 col-xs-12"
-                            >
-                              <div class="field-holder">
-                                <label for="password">Password</label>
-                                <input
-                                  type="password"
-                                  name="password"
-                                  id="password"
-                                  placeholder="Enter your password"
-                                />
-                              </div>
-                            </div>
-                            
                           </div>
                         </div>
                       </div>
@@ -76,11 +65,10 @@
                             <div class="payment-holder">
                               <input
                                 type="submit"
-                                value="Login"
+                                value="Continue"
                                 id="btn-next-restaurant-information"
                                 class="bgcolor"
                               />
-                              <a href="{% url 'forgot_password' %}" class="float-right">Forgot Password?</a>
                             </div>
                           </div>
                         </div>
