--- a/templates/accounts/reset_password.html
+++ b/templates/accounts/reset_password.html
@@ -18,16 +18,14 @@
             style="width: 28rem; min-height: auto"
           >
             <div class="user-holder">
-              <h4 class="text-center" style="margin-bottom: 0">SIGN IN</h4>
-              <p class="text-center">
-                Access Umba Timba Services by signing into your account
-              </p>
+              <h4 class="text-center" style="margin-bottom: 0">RESET YOUR ACCOUNT PASSWORD</h4>
+              
               <hr />
               <div id="restaurant-sets-holder">
                 <form
                   class="form-fields-set foodbakery-dev-restaurant-form"
                   method="post"
-                  action="{% url 'login' %}"
+                  action="{% url 'reset_password' %}"
                   enctype="multipart/form-data"
                 >
                   {% csrf_token %}
@@ -42,12 +40,12 @@
                               class="col-lg-12 col-md-12 col-sm-12 col-xs-12"
                             >
                               <div class="field-holder">
-                                <label for="email">Email</label>
+                                <label for="email">New Password</label>
                                 <input
-                                  type="email"
-                                  id="email"
-                                  name="email"
-                                  placeholder="Enter your email"
+                                  type="password"
+                                  id="password"
+                                  name="password"
+                                  placeholder="Set new password"
                                 />
                               </div>
                             </div>
@@ -55,12 +53,12 @@
                               class="col-lg-12 col-md-12 col-sm-12 col-xs-12"
                             >
                               <div class="field-holder">
-                                <label for="password">Password</label>
+                                <label for="password">Confirm Password</label>
                                 <input
                                   type="password"
-                                  name="password"
-                                  id="password"
-                                  placeholder="Enter your password"
+                                  name="confirm_password"
+                                  id="confirm_password"
+                                  placeholder="Confirm new password"
                                 />
                               </div>
                             </div>
@@ -76,11 +74,10 @@
                             <div class="payment-holder">
                               <input
                                 type="submit"
-                                value="Login"
+                                value="Reset Password"
                                 id="btn-next-restaurant-information"
                                 class="bgcolor"
                               />
-                              <a href="{% url 'forgot_password' %}" class="float-right">Forgot Password?</a>
                             </div>
                           </div>
                         </div>
