--- a/templates/includes/cover.html
+++ b/templates/includes/cover.html
@@ -23,7 +23,7 @@
                   <i class="icon-location"></i>
                   
                   {% if vendor.user_profile.address_line_1 or vendor.user_profile.address_line_2 %}
-                  <p>{{ vendor.user_profile.full_address }}</p>
+                  <p>{{ vendor.user_profile.address }}</p>
                   {% else %}
                     <p>Add address of your restaurant</p>
                   {% endif %}
