--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -43,8 +43,8 @@
                 <div class="copyright-inner">
                   <div class="copy-right">
                     <p>
-                      © 2020 Foodbakery. All Rights Reserved. Developed By
-                      <a href="#">Rathan Kumar</a>
+                      © 2024 Umba Timba Online Marketplace. All Rights Reserved. Developed By
+                      <a href="#">Praneeth Devadiga</a>
                     </p>
                   </div>
                 </div>
@@ -60,5 +60,6 @@
     <!-- Modal Popup End -->
     <script src="{% static 'js/scripts.js' %}"></script>
     <script src="{% static 'js/functions.js' %}"></script>
+    <script src="{% static 'js/custom.js' %}"></script>
   </body>
 </html>
