--- a/templates/marketplace/vendor_detail.html
+++ b/templates/marketplace/vendor_detail.html
@@ -133,13 +133,15 @@
                                                 </div>
                                                 <div class="price-holder">
                                                     <span class="price">₹ {{ food.price }}</span>
-                                                    <a href="#" class="restaurant-add-menu-btn"><i class="icon-plus4 text-color"></i></a>
-                                                    <span id="add-menu-loader-10"></span>
+                                                    <a href="#" class="add_to_cart" style="margin-right: 28px;" data-id="{{ food.id }}" data-url="{% url 'add_to_cart' food.id %}"><i class="icon-plus4 text-color"></i></a>
+                                                    <label id="cart_quantity-{{food.id}}">0</label>
+                                                    <a href="#" class="remove_from_cart" data-id="{{ food.id }}" data-url="{% url 'remove_from_cart' food.id %}"><i class="icon-minus text-color"></i></a>
                                                 </div>
                                             </li>
                                             {% endfor %}
                                             {% else %}
                                             <p class="text-muted mb-2" style="text-align: center; font-weight: bold;">No Food Items Available</p>
+                                            <hr>
                                             {% endif %}
                                             
                                         </ul>
@@ -147,6 +149,11 @@
                                         {% endif %}
                                         
                                     </div>
+                                    
+                                    {% for item in cart_items %}
+                                        <span id="cart_quantity-{{item.fooditem.id}}" class="item_qty d-none" data-qty="{{ item.quantity }}">{{ item.quantity }}</span>
+                                    {% endfor %}
+                                        
                                 </div>
                             </div>
                             
