--- a/templates/marketplace/vendor_detail.html
+++ b/templates/marketplace/vendor_detail.html
@@ -135,7 +135,7 @@
                                                     <span class="price">₹ {{ food.price }}</span>
                                                     <a href="#" class="add_to_cart" style="margin-right: 28px;" data-id="{{ food.id }}" data-url="{% url 'add_to_cart' food.id %}"><i class="icon-plus4 text-color"></i></a>
                                                     <label id="cart_quantity-{{food.id}}">0</label>
-                                                    <a href="#" class="remove_from_cart" data-id="{{ food.id }}" data-url="{% url 'remove_from_cart' food.id %}"><i class="icon-minus text-color"></i></a>
+                                                    <a href="#" class="decrease_in_cart" data-id="{{ food.id }}" data-url="{% url 'decrease_in_cart' food.id %}"><i class="icon-minus text-color"></i></a>
                                                 </div>
                                             </li>
                                             {% endfor %}
