Dynamic cart amount

--- a/templates/marketplace/cart.html
+++ b/templates/marketplace/cart.html
@@ -29,13 +29,14 @@
                                                         <!-- {% if item.fooditem.description %}
                                                             <span>{{ item.fooditem.description }}</span>
                                                         {% endif %} -->
+                                                        <a href="{% url 'vendor_detail' item.fooditem.vendor.vendor_slug %}" class="badge badge-warning">{{ item.fooditem.vendor }}</a>
                                                     </div>
                                                     <div class="price-holder">
                                                         <span class="price">₹ {{ item.fooditem.price }}</span>
-                                                        <a href="#" class="add_to_cart" style="margin-right: 28px;" data-id="{{ item.fooditem.id }}" data-url="{% url 'add_to_cart' item.fooditem.id %}"><i class="icon-plus4 text-color"></i></a>
+                                                        <a href="#" class="add_to_cart" style="margin-right: 28px;"  data-id="{{ item.fooditem.id }}" data-url="{% url 'add_to_cart' item.fooditem.id %}"><i class="icon-plus4 text-color"></i></a>
                                                         <label id="cart_quantity-{{item.fooditem.id}}">0</label>
-                                                        <a href="#" class="decrease_in_cart" data-id="{{ item.fooditem.id }}" data-url="{% url 'decrease_in_cart' item.fooditem.id %}"><i class="icon-minus text-color"></i></a>
-                                                        <a href="#" class="remove_item_from_cart" data-id="{{ item.id }}" data-url="{% url 'remove_item_from_cart' item.id %}"><i class="icon-delete text-color"></i></a>
+                                                        <a href="#" class="decrease_in_cart" data-id="{{ item.fooditem.id }}" data-url="{% url 'decrease_in_cart' item.fooditem.id %}" id="{{item.id}}"><i class="icon-minus text-color"></i></a>
+                                                        <a href="#" class="remove_item_from_cart" data-id="{{ item.id }}"   data-url="{% url 'remove_item_from_cart' item.id %}"><i class="icon-delete text-color"></i></a>
                                                     </div>
                                                 </li>
                                                 {% endfor %}
@@ -69,18 +70,18 @@
                                             <li style="list-style-type:none;" class="pl-2 pr-2">Subtotal
                                                 <span class="price float-right">
                                                     <span class="currency">₹ </span>
-                                                    <span class="subtotal">0</span>
+                                                    <span id="subtotal">{{ subtotal }}</span>
                                                 </span>
                                             </li>
                                             <li style="list-style-type:none;" class="pl-2 pr-2">Tax
                                                 <span class="price float-right">
                                                     <span class="currency">₹ </span>
-                                                    <span class="tax">0</span>
+                                                    <span id="tax">{{ tax }}</span>
                                                 </span></li>
                                             <li style="list-style-type:none; font-weight: 600;" class="pl-2 pr-2">Total
                                                 <span class="price float-right">
                                                     <span class="currency">₹ </span>
-                                                    <span class="total">0</span>
+                                                    <span id="total">{{ grand_total }}</span>
                                                 </span></li>
                                         </ul>
                                     </div>
