--- a/templates/home.html
+++ b/templates/home.html
@@ -138,7 +138,7 @@
               <li class="has-border">
                 {% if vendor.user_profile.profile_picture %}
                 <figure>
-                  <a href="#"
+                  <a href="{% url 'vendor_detail' vendor.vendor_slug %}"
                     ><img
                       src="{{ vendor.user_profile.profile_picture.url }}"
                       class="attachment-full size-full wp-post-image"
@@ -185,11 +185,12 @@
                   <div class="img-holder">
                     {% if vendor.user_profile.profile_picture %}
                     <figure>
-                      <a href="#"
+                      <a href="{% url 'vendor_detail' vendor.vendor_slug %}"
                         ><img
                           src="{{ vendor.user_profile.profile_picture.url }}"
                           class="img-thumb wp-post-image"
                           alt="Logo"
+                          height="85"
                       /></a>
                     </figure>
                     {% endif %}
@@ -201,7 +202,7 @@
                     
                     <div class="post-title">
                       <h5>
-                        <a href="listing-detail.html">{{ vendor.vendor_name}}</a>
+                        <a href="{% url 'vendor_detail' vendor.vendor_slug %}">{{ vendor.vendor_name}}</a>
                       </h5>
                     </div>
                     
@@ -209,6 +210,12 @@
                       
                     <span>{{ vendor.user_profile.city}}, {{ vendor.user_profile.state}} - {{vendor.user_profile.pin_code}}</span>
                     {% endif %}
+
+                    {% if vendor.kms %}
+                    <br>
+                      <span><strong>{{vendor.kms}} km away</strong></span>
+                    {% endif %}
+                      
                       
                   </div>
                 </div>
