--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -27,8 +27,9 @@
                     <input
                       type="text"
                       value=""
+                      id="location"
                       name="location"
-                      placeholder="Enter your delivery location"
+                      placeholder="Your current location"
                       autocomplete="off"
                     />
                     <span
@@ -45,12 +46,29 @@
             <div class="login-option">
               {% if user.is_authenticated %}
               <a href="{% url 'cart' %}">
-                <i class="fa fa-shopping-cart text-danger" style="font-size: 20px;"></i>
-                <span class="badge badge-warning" id="cart_counter" style="border-radius: 50px; position: relative; bottom: 10px; left: -5px;">{{ cart_count }}</span>
+                <i
+                  class="fa fa-shopping-cart text-danger"
+                  style="font-size: 20px"
+                ></i>
+                <span
+                  class="badge badge-warning"
+                  id="cart_counter"
+                  style="
+                    border-radius: 50px;
+                    position: relative;
+                    bottom: 10px;
+                    left: -5px;
+                  "
+                  >{{ cart_count }}</span
+                >
               </a>
               {% endif %}
 
-              <a href="{% url 'marketplace' %}" class="btn btn-outline-danger text-uppercase font-weight-bold">Marketplace</a>
+              <a
+                href="{% url 'marketplace' %}"
+                class="btn btn-outline-danger text-uppercase font-weight-bold"
+                >Marketplace</a
+              >
               {% if user.is_authenticated %}
 
               <a class="get-start-btn" href="{% url 'myAccount' %}">
@@ -87,3 +105,70 @@
   </header>
   <!-- Header End -->
 </div>
+<!-- To get users current location -->
+<script>
+    const currentLocationButton = document.querySelector(
+    "#foodbakery_radius_location_open"
+  );
+  const currentLocation = document.querySelector("#location");
+
+  let currentLocationAddress = sessionStorage.getItem('currentLocationAddress');
+  if (currentLocationAddress != "") {
+    currentLocation.value = currentLocationAddress;
+  }
+
+  currentLocationButton.addEventListener("click", getLocation);
+
+  function getLocation() {
+    if (navigator.geolocation) {
+      navigator.geolocation.getCurrentPosition(showPosition, showError);
+    } else {
+      currentLocation.value = "Geolocation is not supported by this browser.";
+    }
+  }
+
+  function showPosition(position) {
+    let latitude = position.coords.latitude;
+    let longitude = position.coords.longitude;
+    let currentAddress = getAddressOfCurrentLocation(latitude, longitude);
+  }
+
+  function showError(error) {
+    switch (error.code) {
+      case error.PERMISSION_DENIED:
+        currentLocation.value = "User denied the request for Geolocation.";
+        break;
+      case error.POSITION_UNAVAILABLE:
+        currentLocation.value = "Location information is unavailable.";
+        break;
+      case error.TIMEOUT:
+        currentLocation.value = "The request to get user location timed out.";
+        break;
+      case error.UNKNOWN_ERROR:
+        currentLocation.value = "An unknown error occurred.";
+        break;
+    }
+  }
+
+  function getAddressOfCurrentLocation(latitude, longitude) {
+    const GOOGLE_API_KEY = "{{GOOGLE_API_KEY}}"
+    const url = `https://maps.googleapis.com/maps/api/geocode/json?latlng=${latitude},${longitude}&key=${GOOGLE_API_KEY}`;
+
+    fetch(url)
+      .then((response) => response.json())
+      .then((data) => {
+        if (data.status === "OK") {
+          const currentAddress = data.results[0].formatted_address;
+          currentLocation.value = currentAddress;
+          sessionStorage.setItem('currentLocationAddress',currentAddress);
+          window.location = `?lat=${latitude}&lng=${longitude}`;
+        } else {
+          currentLocation.value = "Unable to retrieve address.";
+        }
+      })
+      .catch((error) => {
+        console.error("Error fetching the address:", error);
+        currentLocation.value = "Error fetching the address.";
+      });
+  }
+</script>
