--- a/templates/marketplace/vendor_detail.html
+++ b/templates/marketplace/vendor_detail.html
@@ -22,7 +22,11 @@
                                 </figure>
                             </div>
                             <div class="text-holder">
-                                <span class="restaurant-title">{{ vendor.vendor_name}}</span>
+                                <span class="restaurant-title">{{ vendor.vendor_name}} 
+                                {% if not vendor.is_open %}
+                                    [Closed]
+                                {% endif %}
+                                    </span>
                                 <div class="text">
                                     <i class="icon-location"></i>
                                     <address style="color: whitesmoke;">
@@ -46,33 +50,44 @@
                                 </div>
                             </div>
                         </div>
+                        
+                        {% if business_hours %}
                         <div class="delivery-timing reviews-sortby">
                             
                             <ul>
                                 <li>
                                     <a href="#" class="reviews-sortby-active">
                                         <span>Today :</span>
-                                        11:00 am - 11:00 pm <i class="icon-chevron-small-down"></i>
+                                        
+                                        {% for item in current_business_hours %}
+                                            
+                                            {% if item.is_closed %}
+                                                Closed
+                                            {% else %}
+                                                {{item.from_hour}} - {{item.to_hour}}
+                                                <br>
+                                            {% endif %}
+                                                
+                                        {% endfor %}
+                                            
+                                        <i class="icon-chevron-small-down"></i>
                                     </a>
                                     <ul class="delivery-dropdown">
-                                        <li><a href="#"><span class="opend-day">Monday</span> <span class="opend-time"><small>:</small> 11:00 am - 11:00
-                                                    pm</span></a></li>
-                                        <li><a href="#"><span class="opend-day">Tuesday</span> <span class="opend-time"><small>:</small> 11:00 am - 11:00
-                                                    pm</span></a></li>
-                                        <li><a href="#"><span class="opend-day">Wednesday</span> <span class="opend-time"><small>:</small> 11:00 am - 11:00
-                                                    pm</span></a></li>
-                                        <li><a href="#"><span class="opend-day">Thursday</span> <span class="opend-time"><small>:</small> 11:00 am - 11:00
-                                                    pm</span></a></li>
-                                        <li><a href="#"><span class="opend-day">Friday</span> <span class="opend-time"><small>:</small> 11:00 am - 11:00
-                                                    pm</span></a></li>
-                                        <li><a href="#"><span class="opend-day">Saturday</span> <span class="opend-time"><small>:</small> 11:00 am - 11:00
-                                                    pm</span></a></li>
-                                        <li><a href="#"><span class="opend-day">Sunday</span> <span class="opend-time close-day"><small>:</small>Closed</span></a>
-                                        </li>
+                                        
+                                        {% for item in business_hours  %}
+                                            <li><a href="#"><span class="opend-day">{{item.get_day_display}}</span> <span class="opend-time"><small>:</small> 
+                                            {% if item.is_closed %}
+                                            Closed
+                                            {% else %}
+                                            {{item.from_hour}} - {{item.to_hour}}
+                                            {% endif %}
+                                                </span></a></li>
+                                        {% endfor %}
                                     </ul>
                                 </li>
                             </ul>
                         </div>
+                        {% endif %}
                     </div>
                 </div>
                 <!-- Column End -->
