--- a/templates/home.html
+++ b/templates/home.html
@@ -194,9 +194,18 @@
                       /></a>
                     </figure>
                     {% endif %}
-                    <span class="restaurant-status close">
-                      <em class="bookmarkRibbon"></em>Close
+                    {% if vendor.is_open %}
+                    <span class="restaurant-status open">
+                      <em class="bookmarkRibbon"></em>
+                      Open 
                     </span>
+                        {%else%}
+                        <span class="restaurant-status close">
+                          <em class="bookmarkRibbon"></em>
+                          Close 
+                        </span>
+                      {% endif %}
+                        
                   </div>
                   <div class="text-holder">
                     
