--- a/templates/marketplace/listings.html
+++ b/templates/marketplace/listings.html
@@ -29,7 +29,13 @@
                                                 <a href="{% url 'vendor_detail' vendor.vendor_slug %}"><img src="{{ vendor.user_profile.profile_picture.url }}" class="img-list wp-post-image" alt=""></a>
                                                 {% endif %}
                                             </figure>
-                                            <span class="restaurant-status close"><em class="bookmarkRibbon"></em>Close</span>
+                                            
+                                            {% if vendor.is_open %}
+                                            <span class="restaurant-status open"><em class="bookmarkRibbon"></em>Open</span>
+                                                {% else %}
+                                                <span class="restaurant-status close"><em class="bookmarkRibbon"></em>Close</span>
+                                            {% endif %}
+                                                
                                         </div>
                                         <div class="text-holder">
                                             <div class="list-rating">
