--- a/templates/accounts/customerDashboard.html
+++ b/templates/accounts/customerDashboard.html
@@ -4,7 +4,7 @@
 <!-- Main Section Start -->
 <div class="main-section">
   <!-- LOAD COVER CONTENT HERE -->
-  {% include 'includes/cover.html' %}
+  {% include 'customers/cover.html' %}
   <div class="page-section account-header buyer-logged-in">
     <div class="container">
       <div class="row">
