--- a/templates/includes/customer_sidebar.html
+++ b/templates/includes/customer_sidebar.html
@@ -1,8 +1,8 @@
 <div class="user-account-nav user-account-sidebar">
     <div class="user-nav-list">
       <ul>
-        <li class="active"><a href="restaurant-dashboard.html"><i class="icon-dashboard3"></i>Dashboard</a></li>
-        <li><a href="restaurant-restaurant.html"><i class="icon-building"></i>Profile Settings</a></li>
+        <li class="{% if '/customerDashboard/' == request.path or '/customer/' == request.path %}active{% endif %}"><a href="{% url 'customerDashboard' %}"><i class="icon-dashboard3"></i>Dashboard</a></li>
+        <li class="{% if '/profile/' in request.path %}active{% endif %}"><a href="{% url 'customer_profile' %}"><i class="icon-building"></i>Profile Settings</a></li>
         <li><a href="restaurant-orders.html"><i class="icon-add_shopping_cart"></i>My Orders</a></li>
         <li><a href="restaurant-change-password.html"><i class="icon-unlock-alt"></i>Change Password</a></li>
         <li><a class="logout-btn" href="{% url 'logout' %}"><i class="icon-log-out"></i>Signout</a></li>
