Orders Model and Checkout Page, Populating field values from One model to form of Another Model

--- a/templates/marketplace/cart.html
+++ b/templates/marketplace/cart.html
@@ -89,7 +89,8 @@
                                                 <span class="price float-right">
                                                     <span class="currency">₹ </span>
                                                     <span id="total">{{ grand_total }}</span>
-                                                </span></li>
+                                            </span></li>
+                                            <a href="{% url 'checkout' %}" class="btn btn-danger p-2 w-100 text-uppercase mt-3">Proceed to checkout</a>
                                         </ul>
                                     </div>
                                         
