--- a/templates/accounts/customerDashboard.html
+++ b/templates/accounts/customerDashboard.html
@@ -19,7 +19,7 @@
               <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <div class="row">
                   <div class="element-title has-border right-filters-row">
-                    <h5>Recent Orders</h5>
+                    <h5 class="text-uppercase">Recent Orders</h5>
                     <div class="right-filters row pull-right">
                       <div class="col-lg-6 col-md-6 col-xs-6">
                         <div class="input-field">
