--- a/templates/orders/place_order.html
+++ b/templates/orders/place_order.html
@@ -9,46 +9,15 @@
                 <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
                     <div class="tabs-holder horizontal">
                         <ul class="stickynav-tabs nav nav-tabs">
-                            <li class="active"><a data-toggle="tab" href="#home"><i class="fa fa-shopping-cart text-danger"></i>Cart Items</a></li>
+                            <li class="active"><a data-toggle="tab" href="#home"><i class="fa fa-shopping-cart text-danger"></i>Review your Billing Address</a></li>
                             
                         </ul>
                         <div class="tab-content">
                             <div id="home" class="tab-pane in active">
                                 <div class="menu-itam-holder">
-                                    <div class="text-center p-5" id="empty-cart" style="display: none;">
-                                        <h3>Cart is Empty</h3>
-                                    </div>
                                     <div id="menu-item-list-6272" class="menu-itam-list">
-                                        <ul>                                               
-                                            {% if cart_items %}                                               
-                                                {% for item in cart_items %}                                                
-                                                <li id="cart-item-{{item.id}}">
-                                                    <div class="image-holder"><img src="{{ item.fooditem.image.url }}" alt="Food Image" width="100" height="75" ></div>
-                                                    <div class="text-holder">
-                                                        <h6>{{ item.fooditem }}</h6>
-                                                        {% if item.fooditem.description %}
-                                                            <span style="width: 18rem; text-align: justify;">{{ item.fooditem.description }}</span>
-                                                        {% endif %}
-                                                        <a href="{% url 'vendor_detail' item.fooditem.vendor.vendor_slug %}" class="badge badge-warning">{{ item.fooditem.vendor }}</a>
-                                                    </div>
-                                                    <div class="price-holder">
-                                                        <span class="price">₹ {{ item.fooditem.price }}</span>
-                                                        <a href="#" class="add_to_cart" style="margin-right: 28px;"  data-id="{{ item.fooditem.id }}" data-url="{% url 'add_to_cart' item.fooditem.id %}"><i class="icon-plus4 text-color"></i></a>
-                                                        <label id="cart_quantity-{{item.fooditem.id}}">0</label>
-                                                        <a href="#" class="decrease_in_cart" data-id="{{ item.fooditem.id }}" data-url="{% url 'decrease_in_cart' item.fooditem.id %}" id="{{item.id}}"><i class="icon-minus text-color"></i></a>
-                                                        <a href="#" class="remove_item_from_cart" data-id="{{ item.id }}"   data-url="{% url 'remove_item_from_cart' item.id %}"><i class="icon-delete text-color"></i></a>
-                                                    </div>
-                                                </li>
-                                                {% endfor %}
-                                            {%  else %}
-                                            <h3 class="text-center p-5">Cart is empty</h3>
-                                            {% endif %}
-                                        </ul>
-                                    </div>
-                                    {% for item in cart_items %}
-                                        <span id="cart_quantity-{{item.fooditem.id}}" class="item_qty d-none" data-qty="{{ item.quantity }}">{{ item.quantity }}</span>
-                                    {% endfor %}
                                         
+                                    </div>                                        
                                 </div>
                             </div>
                             
