--- a/templates/marketplace/checkout.html
+++ b/templates/marketplace/checkout.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{ load static }
+{% load static %}
 {% block content %}
 <!-- Main Section Start -->
 <div class="main-section">
@@ -16,7 +16,7 @@
                             <div id="home" class="tab-pane in active">
                                 <div class="menu-itam-holder">
                                     <div id="menu-item-list-6272" class="menu-itam-list">
-                                        <form action="" method="post">
+                                        <form action="{% url 'place_order' %}" method="post">
                                             {% csrf_token %}
                                             <div class="row">
                                                 <div class="form-group col-lg-6 col-md-6 col-sm-12">
@@ -84,7 +84,7 @@
                                 <div class="menu-itam-holder">
                                     <div id="menu-item-list-6272" class="menu-itam-list">
                                         <ul>                                               
-                                            {% if cart_items %}                                               
+                                                                                         
                                                 {% for item in cart_items %}                                                
                                                 <li id="cart-item-{{item.id}}">
                                                     <div class="image-holder"><img src="{{ item.fooditem.image.url }}" alt="Food Image" width="100" height="75" ></div>
@@ -101,9 +101,7 @@
                                                     </div>
                                                 </li>
                                                 {% endfor %}
-                                            {%  else %}
-                                            <h3 class="text-center p-5">Cart is empty</h3>
-                                            {% endif %}
+                                           
                                         </ul>
                                     </div>
                                     <div>
@@ -131,7 +129,20 @@
                                                     <span class="currency">₹ </span>
                                                     <span id="total">{{ grand_total }}</span>
                                             </span></li>
-                                            <button type="submit"  class="btn btn-danger p-2 w-100 text-uppercase mt-3">PLACE ORDER</button>
+                                            <!-- PAYMENT METHOD -->
+                                            <div class="payment-method mt-3">
+                                            <h5 class="text-uppercase">Select Payment Method</h5>
+                                                <label>
+                                                    <input type="radio" value="PayPal" name="payment_method">
+                                                    <img src="{% static 'images/PayPal.png' %}" alt="PayPal" width="100">
+                                                </label>
+                                                <label>
+                                                    <input type="radio" value="RazorPay" name="payment_method">
+                                                    <img src="{% static 'images/razorpay_logo.png' %}" alt="RazorPay" width="100">
+                                                </label>
+                                            </div>
+                                            <span class="text-danger" id="payment-method-error"></span>
+                                            <button onclick="return paymentMethodConfirm()" type="submit"  class="btn btn-danger p-2 w-100 text-uppercase mt-3">PLACE ORDER</button>
                                         </ul>
                                     </form>
                                     </div>
@@ -148,4 +159,24 @@
     </div>
 </div>
 <!-- Main Section End -->
+<script>
+    function paymentMethodConfirm() {
+        const paymentMethod = document.querySelector('input[name="payment_method"]:checked');
+        if (!paymentMethod) {
+            document.querySelector('#payment-method-error').textContent = "Select payment method";
+            return false;
+        } else {
+            let confirmPaymentMethod = confirm(`You have choosen ${paymentMethod.value} as preferred payment method.\nClick "OK" to continue`);
+            return confirmPaymentMethod;
+        }
+    }
+
+    const paymentMethods = document.querySelectorAll('input[name="payment_method"]');
+
+    paymentMethods.forEach((radio) => {
+        radio.onchange = function() {
+            document.querySelector('#payment-method-error').textContent = "";
+        };
+    });
+</script>
 {% endblock %}
