Paypal gateway implemented

--- a/templates/marketplace/cart.html
+++ b/templates/marketplace/cart.html
@@ -64,7 +64,7 @@
                         </ul>
                         <div class="tab-content">
                             <div id="home" class="tab-pane in active">
-                                <div class="menu-item-holder">
+                                <div class="menu-item-holder p-2">
                                     <div>
                                         <ul>
                                             <li style="list-style-type:none;" class="pl-2 pr-2">Subtotal
