--- a/templates/base.html
+++ b/templates/base.html
@@ -42,6 +42,8 @@
    {% endif %}
 
    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>    
+   <!-- Include the PayPal JavaScript SDK -->
+   <script src="https://www.paypal.com/sdk/js?client-id={{PAYPAL_CLIENT_ID}}&currency=USD"></script>
 
     <style>
       body,
