--- a/templates/orders/place_order.html
+++ b/templates/orders/place_order.html
@@ -1,78 +1,197 @@
-{% extends 'base.html' %}
-{% load static %}
-{% block content %}
+{% extends 'base.html' %} {% load static %} {% block content %}
 <!-- Main Section Start -->
 <div class="main-section">
-    <div class="page-section pt-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
-                    <div class="tabs-holder horizontal">
-                        <ul class="stickynav-tabs nav nav-tabs">
-                            <li class="active"><a data-toggle="tab" href="#home"><i class="fa fa-shopping-cart text-danger"></i>Review your Billing Address</a></li>
+  <div class="page-section pt-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
+          <div class="tabs-holder horizontal">
+            <ul class="stickynav-tabs nav nav-tabs">
+              <li class="active">
+                <a data-toggle="tab" href="#home"
+                  ><i class="fa fa-shopping-cart text-danger"></i>Review your
+                  Billing Address</a
+                >
+              </li>
+            </ul>
+            <div class="tab-content">
+              <div id="home" class="tab-pane in active">
+                <div class="menu-itam-holder">
+                  <div id="menu-item-list-6272" class="menu-itam-list">
+                    <div class="billing-address">
+                        <div><b>{{ order.name }}</b></div>
+                        <div>{{ order.address }}</div>
+                        <div>{{ order.city }} - {{ order.pin_code }}</div>
+                        <div>{{ order.state }}, {{ order.country }}</div>
+                        <div><b>Phone Number: {{order.phone_number}}</b></div>
+                        
+                        {% if order.alternate_phone_number %}
+                        <div><b>Alternate Phone Number: {{order.alternate_phone_number}}</b></div>
+                        {% endif %}
                             
-                        </ul>
-                        <div class="tab-content">
-                            <div id="home" class="tab-pane in active">
-                                <div class="menu-itam-holder">
-                                    <div id="menu-item-list-6272" class="menu-itam-list">
-                                        
-                                    </div>                                        
-                                </div>
-                            </div>
-                            
-                        </div>
+                        <div><b>Email: {{order.email}}</b></div>
+                        <div><b>Payment Method: {{order.payment_method}}</b></div>
+                        <br>
+                        <div><a href="{% url 'checkout' %}" class="btn btn-outline-danger"><i class="fa-solid fa-pen-to-square"></i></a></div>
+                        <br>
                     </div>
+                  </div>
                 </div>
-                <!-- YOUR ORDER SECTION -->
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                    <div class="tabs-holder horizontal">
-                        <ul class="stickynav-tabs nav nav-tabs">
-                            <li class="active"><a data-toggle="tab" href="#home"><i class="icon- icon-room_service"></i>Your Order</a></li>
-                            
-                        </ul>
-                        <div class="tab-content">
-                            <div id="home" class="tab-pane in active">
-                                <div class="menu-item-holder">
-                                    <div>
-                                        <ul>
-                                            <li style="list-style-type:none;" class="pl-2 pr-2">Subtotal
-                                                <span class="price float-right">
-                                                    <span class="currency">₹ </span>
-                                                    <span id="subtotal">{{ subtotal }}</span>
-                                                </span>
-                                            </li>
-                                            
-                                            {% for key,value in tax_dict.items %}
-                                                {% for i,j in value.items  %}
-                                                    <li style="list-style-type:none;" class="pl-2 pr-2">{{key}} ({{i}}%)
-                                                        <span class="price float-right">
-                                                            <span class="currency">₹ </span>
-                                                            <span id="tax-{{key}}">{{ j }}</span>
-                                                        </span>
-                                                    </li>
-                                                {% endfor %}
-                                            {% endfor %}
-
-                                            <li style="list-style-type:none; font-weight: 600;" class="pl-2 pr-2">Total
-                                                <span class="price float-right">
-                                                    <span class="currency">₹ </span>
-                                                    <span id="total">{{ grand_total }}</span>
-                                            </span></li>
-                                            <a href="{% url 'checkout' %}" class="btn btn-danger p-2 w-100 text-uppercase mt-3">Proceed to checkout</a>
-                                        </ul>
-                                    </div>
-                                        
-                                </div>
-                            </div>
-                            
-                        </div>
-                    </div>
-                </div>
-                
+              </div>
             </div>
+          </div>
         </div>
+        <!-- YOUR ORDER SECTION -->
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+          <div class="tabs-holder horizontal">
+            <ul class="stickynav-tabs nav nav-tabs">
+              <li class="active">
+                <a data-toggle="tab" href="#home"
+                  ><i class="icon- icon-room_service"></i>Your Order</a
+                >
+              </li>
+            </ul>
+            <div class="tab-content p-2">
+              <div id="home" class="tab-pane in active">
+                <div class="menu-item-holder">
+                  <div>
+                    <table>
+                        <tbody>
+                            {% for item in cart_items  %}
+                                <tr>
+                                    <td><img src="{{ item.fooditem.image.url }}" alt="Food Image" width="40" ></td>
+                                    <td><b>{{ item.fooditem }}</b></td>
+                                    <td> {{ item.quantity }} </td>
+                                    <td>₹ {{ item.fooditem.price }}</td>
+                                </tr>
+                            {% endfor %}
+                                
+                        </tbody>
+                    </table>
+                    <ul>
+                      <li style="list-style-type: none" class="pl-2 pr-2">
+                        Subtotal
+                        <span class="price float-right">
+                          <span class="currency">₹ </span>
+                          <span id="subtotal">{{ subtotal }}</span>
+                        </span>
+                      </li>
+
+                      {% for key,value in tax_dict.items %} 
+                      {% for i,j in value.items %}
+                      <li style="list-style-type: none" class="pl-2 pr-2">
+                        {{key}} ({{i}}%)
+                        <span class="price float-right">
+                          <span class="currency">₹ </span>
+                          <span id="tax-{{key}}">{{ j }}</span>
+                        </span>
+                      </li>
+                      {% endfor %} 
+                      {% endfor %}
+
+                      <li
+                        style="list-style-type: none; font-weight: 600"
+                        class="pl-2 pr-2"
+                      >
+                        Total
+                        <span class="price float-right">
+                          <span class="currency">₹ </span>
+                          <span id="total">{{ grand_total }}</span>
+                        </span>
+                      </li>
+                      <!-- <a href="{% url 'checkout' %}" class="btn btn-danger p-2 w-100 text-uppercase mt-3">Proceed to checkout</a> -->
+                      <div id="paypal-button-container" class="mt-2"></div>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
 </div>
 <!-- Main Section End -->
+<script>
+  // Render the PayPal button into #paypal-button-container
+  paypal
+    .Buttons({
+      // Call your server to set up the transaction
+      createOrder: function (data, actions) {
+        return actions.order.create({
+          purchase_units: [
+            {
+              amount: {
+                value: "{{ grand_total }}",
+              },
+            },
+          ],
+        });
+      },
+
+      // Call your server to finalize the transaction
+      onApprove: function (data, actions) {
+        return actions.order.capture().then(function (orderData) {
+          console.log(
+            "Capture result",
+            orderData,
+            JSON.stringify(orderData, null, 2)
+          );
+          let transaction = orderData.purchase_units[0].payments.captures[0];
+
+          let transaction_id = transaction.id;
+          let status = orderData.status;
+          let payment_method = "PayPal";
+          let url = "{% url 'payments' %}";
+          let order_number = "{{order.order_number}}";
+
+          sendTransaction(transaction_id, status, payment_method, url, order_number);
+        });
+      },
+    })
+    .render("#paypal-button-container");
+
+
+    function getCookie(name) {
+        const encodedName = encodeURIComponent(name) + "=";
+        const decodedCookies = decodeURIComponent(document.cookie);
+        const cookieArray = decodedCookies.split('; ');
+
+        for (let i = 0; i < cookieArray.length; i++) {
+            let cookie = cookieArray[i];
+            if (cookie.indexOf(encodedName) === 0) {
+                return cookie.substring(encodedName.length, cookie.length);
+            }
+        }
+        return null;
+    }
+
+    // Asynchronous function to send transaction data to the backend view.
+    async function sendTransaction(transaction_id, status, payment_method, url, order_number) {
+        try {
+            const response = await fetch(url, {
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/json",
+                    "X-CSRFToken": getCookie('csrf_token'), 
+                },
+                body: JSON.stringify({
+                    'transaction_id': transaction_id,
+                    'order_number': order_number,
+                    'payment_method': payment_method,
+                    'status': status,
+                }),
+            });
+            if (!response.ok) {
+                throw new Error(`HTTP error! status: ${response.status}`);
+            }
+            const responseData = await response.json();
+            console.log('Transaction successful:', responseData);
+
+        } catch (error) {
+            console.error('Error sending transaction:', error);
+        }
+    }
+</script>
 {% endblock %}
