--- a/templates/customers/customer_my_orders.html
+++ b/templates/customers/customer_my_orders.html
@@ -15,21 +15,7 @@
         <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
           <div class="user-dashboard loader-holder">
             <div class="user-holder">
-              <h5 class="text-uppercase">Overview</h5>
-              <div class="row">
-                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                  <div class="card">
-                    <div class="card-header text-center">
-                      Total Orders
-                    </div>
-                    <div class="card-body text-center">
-                      <a href="{% url 'customer_my_orders' %}"><h5 class="card-title">{{orders_count}}</h5></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <br>
-              <h5 class="text-uppercase">Recent Orders</h5>
+              <h5 class="text-uppercase">My Orders</h5>
               <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                   <div class="user-orders-list">
@@ -47,7 +33,7 @@
                         </thead>
                         <tbody>
                           
-                          {% for order in recent_orders %}
+                          {% for order in orders %}
                           <tr>
                             <td><b><a href="{% url 'order_details' order.order_number %}">{{ order.order_number}}</a></b></td>
                             <td>{{order.name}}</td>
